# Multi-Agentic-Orchestration-System

./: .gitignore  README.md  pyproject.toml
AgentArch/: .$ReaderAgent.drawio.bkp  .$Schema.drawio.bkp  .xdp-.$ReaderAgent.drawio.bkp-HHVkNc  .xdp-.$WriterAgent.drawio.bkp-VQpgNm  ReaderAgent.drawio  Schema.drawio  WriterAgent.drawio
Agents/communicationagent/: README.md  pyproject.toml
Agents/communicationagent/src/communicationagent/: crew.py  main.py
Agents/communicationagent/src/communicationagent/config/: tasks.yaml
Agents/communicationagent/src/communicationagent/tools/: dbSearch.py  emailTool.py  reviewTool.py  whatsappTool.py
Agents/localfiles/: BTech_2nd_year_core_Syllabus.md  sem1_examfee.md
Agents/readeragent/: pyproject.toml
Agents/readeragent/src/readeragent/: crew.py  main.py
Agents/readeragent/src/readeragent/config/: agents.yaml  tasks.yaml
Agents/readeragent/src/readeragent/pymodels/: descriptionModel.py
Agents/readeragent/src/readeragent/tools/: ListFilesTool.py  QuesAnswTool.py  UniversalParserTool.py
Agents/recruitingagent/: README.md  pyproject.toml
Agents/recruitingagent/src/recruitingagent/: crew.py  main.py
Agents/recruitingagent/src/recruitingagent/config/: agents.yaml  tasks.yaml
Agents/recruitingagent/src/recruitingagent/pymodels/: webSearchOutput.py
Agents/recruitingagent/src/recruitingagent/tools/: DBSaverTool.py
Agents/recruitingagent/src/recruitingagent/tools/searchTools/: DBsearchTool.py  WebsearchTool.py
Agents/writeragent/: pyproject.toml
Agents/writeragent/src/writeragent/: crews.py  flow.py  main.py
Agents/writeragent/src/writeragent/config/docx/: agents.yaml  (+1 more)
Agents/writeragent/src/writeragent/pymodels/: professional_style.docx
Agents/writeragent/src/writeragent/tools/: DOCXFileTool.py  ExcelFileTool.py  PDFFileTool.py  TextFileTool.py
Agents/writtenFiles/: Q1_Sales_Report.docx  q1_sales_report.md  temp_input.md
Manager/: .$ManagerAI.drawio.bkp  ManagerAI.drawio  pyproject.toml
Manager/manager/src/manager/: IO.py  PlannerAgent.py  Summarizer.py  crews.py  crews_collection.py  flow.py  main.py
communicationagent/: README.md  pyproject.toml
communicationagent/src/communicationagent/: crew.py  main.py
communicationagent/src/communicationagent/config/: agents.yaml  tasks.yaml
communicationagent/src/communicationagent/pyModels/: extracter.py
communicationagent/src/communicationagent/tools/: client.csv  custom_tool.py  dbSearch.py  emailTool.py  employee.csv  reviewTool.py  whatsappTool.py
docs/: KINS.md  README.md  ReaderAgent.md  RecruitingAgent.md  TEMPLATE.md  WriterAgent.md  communicationagent.md
qdrant_db/: meta.json
qdrant_db/collection/local_documents/: storage.sqlite
readeragent/src/readeragent/: crew.py  main.py
readeragent/src/readeragent/pymodels/: descriptionModel.py
readeragent/src/readeragent/tools/: FileSeprationTool.py  ListFilesTool.py
recruitingagent/: README.md  pyproject.toml
recruitingagent/src/recruitingagent/: crew.py  main.py
recruitingagent/src/recruitingagent/config/: agents.yaml  tasks.yaml
recruitingagent/src/recruitingagent/pymodels/: recuirementExtracter.py
recruitingagent/src/recruitingagent/tools/: DBSaverTool.py
recruitingagent/src/recruitingagent/tools/searchTools/: DBSaverTool.py  DBsearchTool.py  WebsearchTool.py
writeragent/src/writeragent/: crews.py
writeragent/src/writeragent/config/excel/: tasks.yaml
writeragent/src/writeragent/pymodels/: ContentExtracter.py  report.css
writeragent/src/writeragent/tools/: UniversalFileWritingTool.py
writtenFiles/: Project_Report.docx  Sales_data.xlsx
(+6 files in other folders)
