[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[google-genai,tools]>=1.6.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.187.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "litellm>=1.80.10",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "twilio>=9.8.7",
]
