[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[google-genai,tools]>=1.6.0",
    "docling>=2.70.0",
    "dotenv>=0.9.9",
    "fastembed>=0.7.4",
    "google-api-python-client>=2.187.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "litellm>=1.80.10",
    "markdown>=3.10.1",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pypandoc>=1.16.2",
    "qdrant-client>=1.16.2",
    "twilio>=9.8.7",
    "weasyprint>=68.0",
]
