[project]
name = "kins-project"
version = "0.1.0"
description = "BPO Multi-Agent System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "manager",
    "nest-asyncio>=1.6.0",
] # Points to the manager which pulls everything else

[tool.uv.workspace]
members = [
    "Agents/communicationagent",
    "Agents/readeragent",
    "Agents/recruitingagent",
    "Agents/writeragent",
    "Manager"
]

[tool.uv.sources]
communicationagent = { workspace = true }
readeragent = { workspace = true }
recruitingagent = { workspace = true }
writeragent = { workspace = true }
manager = { workspace = true }
