[project]
name = "communicationagent"
version = "0.1.0"
description = "CommunicationAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0",
    "pandas>=2.3.3",
]

[project.scripts]
communicationagent = "communicationagent.main:run"
run_crew = "communicationagent.main:run"
train = "communicationagent.main:train"
replay = "communicationagent.main:replay"
test = "communicationagent.main:test"
run_with_trigger = "communicationagent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
