[project]
name = "recruitingagent"
version = "0.1.0"
description = "RecruitingAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
recruitingagent = "recruitingagent.main:run"
run_crew = "recruitingagent.main:run"
train = "recruitingagent.main:train"
replay = "recruitingagent.main:replay"
test = "recruitingagent.main:test"
run_with_trigger = "recruitingagent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
